--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,27 @@
     	<version>4.3.4.Final</version>
     </dependency>
 
-    
+
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.29</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>bankofjava</finalName>
+
+    <plugins>
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+        </configuration>
+    </plugin>
+    </plugins>
+
   </build>
 </project>
