--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /hibernate.cfg.xml
+WebContent/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
