--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,9 +7,19 @@
   <servlet>
   	<servlet-name>springapp</servlet-name>
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  	<init-param>
+  		<param-name>contextConfigLocation</param-name>
+  		<param-value>/WEB-INF/config/servlet-config.xml</param-value>
+  	</init-param>  	
   	<load-on-startup>1</load-on-startup>
   </servlet>
   
+  <!-- 
+  <context-param>  
+        <param-name>contextConfigLocation</param-name>  
+        <param-value>/WEB-INF/config/servlet-config.xml</param-value>  
+    </context-param>  
+     -->
   <servlet-mapping>
   	<servlet-name>springapp</servlet-name>
   	<url-pattern>/</url-pattern>
