yahoo finance with currencies integration

--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,16 @@
     	<artifactId>hibernate-core</artifactId>
     	<version>4.3.4.Final</version>
     </dependency>
-
-
+      <dependency>
+          <groupId>javax.json</groupId>
+          <artifactId>javax.json-api</artifactId>
+          <version>1.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.json</artifactId>
+          <version>1.0.4</version>
+      </dependency>
     <dependency>
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
