--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<version>5.1.29</version>
     </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-web</artifactId>
+    	<version>4.0.2.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>bankofjava</finalName>
