--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,16 @@
     	<artifactId>postgresql</artifactId>
     	<version>9.1-901-1.jdbc4</version>
     </dependency>
+    <dependency>
+    	<groupId>joda-time</groupId>
+    	<artifactId>joda-time</artifactId>
+    	<version>2.7</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.jinq</groupId>
+    	<artifactId>jinq-jpa</artifactId>
+    	<version>1.7.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>bankofjava</finalName>
