--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
     	<artifactId>jinq-jpa</artifactId>
     	<version>1.7.1</version>
     </dependency>
+    <dependency>
+    	<groupId>org.jadira.usertype</groupId>
+    	<artifactId>usertype.core</artifactId>
+    	<version>3.2.0.GA</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>bankofjava</finalName>
