--- a/pom.xml
+++ b/pom.xml
@@ -65,30 +65,40 @@
     	<version>2.7</version>
     </dependency>
     <dependency>
-    	<groupId>org.jinq</groupId>
-    	<artifactId>jinq-jpa</artifactId>
-    	<version>1.7.1</version>
-    </dependency>
-    <dependency>
     	<groupId>org.jadira.usertype</groupId>
     	<artifactId>usertype.core</artifactId>
     	<version>3.2.0.GA</version>
     </dependency>
+    
   </dependencies>
   <build>
     <finalName>bankofjava</finalName>
 
     <plugins>
         <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
-        </configuration>
-    </plugin>
+	        <groupId>org.mortbay.jetty</groupId>
+	    	<artifactId>maven-jetty-plugin</artifactId>
+	    	<version>7.0.0.pre5</version>
+	        <configuration>
+	            <source>1.8</source>
+	            <target>1.8</target>
+	        </configuration>
+	        <dependencies>
+	    	<dependency>
+		    	<groupId>org.ow2.asm</groupId>
+		    	<artifactId>asm</artifactId>
+		    	<version>5.0.4</version>
+		    </dependency>
+		    <dependency>
+		    	<groupId>org.ow2.asm</groupId>
+		    	<artifactId>asm-commons</artifactId>
+		    	<version>5.0.4</version>
+		    </dependency>
+	    </dependencies>
+	    </plugin>
+	    
     </plugins>
 
   </build>
+
 </project>
