--- a/pom.xml
+++ b/pom.xml
@@ -69,36 +69,57 @@
     	<artifactId>usertype.core</artifactId>
     	<version>3.2.0.GA</version>
     </dependency>
-    
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlet</artifactId>
+      <version>9.2.10.v20150310</version>
+    </dependency>
+    <dependency>
+    <groupId>org.mortbay.jetty</groupId>
+           <artifactId>jetty-runner</artifactId>
+           <version>7.4.5.v20110725</version>
+    </dependency>
   </dependencies>
   <build>
-    <finalName>bankofjava</finalName>
-
-    <plugins>
-        <plugin>
-	        <groupId>org.mortbay.jetty</groupId>
-	    	<artifactId>maven-jetty-plugin</artifactId>
-	    	<version>7.0.0.pre5</version>
-	        <configuration>
-	            <source>1.8</source>
-	            <target>1.8</target>
-	        </configuration>
-	        <dependencies>
-	    	<dependency>
-		    	<groupId>org.ow2.asm</groupId>
-		    	<artifactId>asm</artifactId>
-		    	<version>5.0.4</version>
-		    </dependency>
-		    <dependency>
-		    	<groupId>org.ow2.asm</groupId>
-		    	<artifactId>asm-commons</artifactId>
-		    	<version>5.0.4</version>
-		    </dependency>
-	    </dependencies>
-	    </plugin>
-	    
-    </plugins>
-
-  </build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            
+			
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-dependency-plugin</artifactId>
+			    <version>2.3</version>
+			    <executions>
+			        <execution>
+			            <phase>package</phase>
+			            <goals><goal>copy</goal></goals>
+			            <configuration>
+			                <artifactItems>
+			                    <artifactItem>
+			                        <groupId>org.mortbay.jetty</groupId>
+			                        <artifactId>jetty-runner</artifactId>
+			                        <version>7.4.5.v20110725</version>
+			                        <destFileName>jetty-runner.jar</destFileName>
+			                    </artifactItem>
+			                </artifactItems>
+			                <source>1.8</source>
+                            <target>1.8</target>
+			            </configuration>
+			        </execution>
+			    </executions>
+			</plugin>
+			
+			            
+        </plugins>
+        
+    </build>
 
 </project>
