--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,30 @@
            <artifactId>jetty-runner</artifactId>
            <version>7.4.5.v20110725</version>
     </dependency>
+    <dependency>
+    	<groupId>org.eclipse.jetty</groupId>
+    	<artifactId>jetty-maven-plugin</artifactId>
+    	<version>9.3.0.RC0</version>
+    	<type>maven-plugin</type>
+    </dependency>
+    <dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-core</artifactId>
+	    <version>2.4.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.4.1.1</version>
+	</dependency>
   </dependencies>
   <build>
         <plugins>
+        	<plugin>
+		    	<groupId>org.eclipse.jetty</groupId>
+		    	<artifactId>jetty-maven-plugin</artifactId>
+		    	<version>9.3.0.RC0</version>
+		    </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
