--- a/pom.xml
+++ b/pom.xml
@@ -79,12 +79,12 @@
            <artifactId>jetty-runner</artifactId>
            <version>7.4.5.v20110725</version>
     </dependency>
-    <dependency>
+    <!-- <dependency>
     	<groupId>org.eclipse.jetty</groupId>
     	<artifactId>jetty-maven-plugin</artifactId>
     	<version>9.3.0.RC0</version>
     	<type>maven-plugin</type>
-    </dependency>
+    </dependency> -->
     <dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-core</artifactId>
