--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
 	    <artifactId>jackson-databind</artifactId>
 	    <version>2.4.1.1</version>
 	</dependency>
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-core</artifactId>
+		<version>2.0.8-beta</version>
+	</dependency>
   </dependencies>
   <build>
         <plugins>
