--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
   <name>bankofjava Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+      <dependency>
+          <groupId>org.scala-lang</groupId>
+          <artifactId>scala-library</artifactId>
+          <version>2.11.7</version>
+      </dependency>
   	<dependency>
     	<groupId>junit</groupId>
     	<artifactId>junit</artifactId>
@@ -136,11 +141,37 @@
 			                        <destFileName>jetty-runner.jar</destFileName>
 			                    </artifactItem>
 			                </artifactItems>
-			                <source>1.8</source>
-                            <target>1.8</target>
 			            </configuration>
 			        </execution>
 			    </executions>
+			</plugin>
+
+			<plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>scala-maven-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<execution>
+						<id>compile</id>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<phase>compile</phase>
+					</execution>
+					<execution>
+						<id>test-compile</id>
+						<goals>
+							<goal>testCompile</goal>
+						</goals>
+						<phase>test-compile</phase>
+					</execution>
+					<execution>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			
 			            
