--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
 		<artifactId>mockito-core</artifactId>
 		<version>2.0.8-beta</version>
 	</dependency>
+	<dependency>
+	  <groupId>org.scalatest</groupId>
+	  <artifactId>scalatest_2.11</artifactId>
+	  <version>2.2.4</version>
+	  <scope>test</scope>
+	</dependency>
   </dependencies>
   <build>
         <plugins>
@@ -190,7 +196,24 @@
                     </dependency>
                 </dependencies>
             </plugin>
-			
+			<plugin>
+				<groupId>org.scalatest</groupId>
+				<artifactId>scalatest-maven-plugin</artifactId>
+				<version>1.0</version>
+				<configuration>
+					<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+					<junitxml>.</junitxml>
+					<filereports>WDF TestSuite.txt</filereports>
+				</configuration>
+				<executions>
+					<execution>
+						<id>test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			            
         </plugins>
         
